--- a/11_oneway_anova.ipynb
+++ b/11_oneway_anova.ipynb
@@ -10,7 +10,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.8.3-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
@@ -24,7 +24,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,11 +63,11 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>weight</th>\n      <th>group</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4.17</td>\n      <td>ctrl</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>5.58</td>\n      <td>ctrl</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5.18</td>\n      <td>ctrl</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>6.11</td>\n      <td>ctrl</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4.50</td>\n      <td>ctrl</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 24
+     "execution_count": 3
     }
    ],
    "source": [
-    "df = pd.read_csv('data/PlantGrowth.csv')\n",
+    "df = pd.read_csv('../data/PlantGrowth.csv')\n",
     "print(df.shape)\n",
     "df.head()"
    ]
